--- a/public/posts.css
+++ b/public/posts.css
@@ -23,13 +23,26 @@ header {
   text-align: center;
 }
 
-form p {
+#textPub {
   background-color: #FFF;
   border-radius: 5px;
   font-size: 16px;
   outline: none;
   resize: none;
   overflow: auto;
+}
+
+#msg {
+  color: #000;
+}
+
+#msg h6 {
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.mt-2 {
+  color: grey;
 }
 
 .btn {
